# MatchSight

./: .gitignore  LICENSE  README.md
Core/: CMakeLists.txt
Core/MatchJudging/: CMakeLists.txt
Core/MatchJudging/include/: GAMESTATE.hpp
Core/MatchJudging/test/: MatchJudgingTest.cpp
Core/VisionModel/: CMakeLists.txt
Core/VisionModel/include/: ObjectTypes.hpp  Tracker.hpp  ballTracker.hpp
Core/VisionModel/test/: VisionTest.cpp
Core/test/: CoreTests.cpp
Core/util/: CMakeLists.txt
Core/util/include/: Ilogger.hpp  multiModalLogger.hpp
Core/util/src/: multiModalLogger.cpp
Core/util/test/: loggerTest.cpp
